--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "classnames": "^2.5.1",
     "firebase": "^10.12.0",
+    "firebaseui": "^6.1.0",
     "framer-motion": "^11.1.7",
     "react": "^18.2.0",
     "react-date-picker": "^10.6.0",
